tests/errors/empty.pyx
# cython: autotestdict=false
# mode: error
